crates/paladin-auth-tui/tests/snapshots/view_snapshots__snapshot_export_modal_refused_overwrite_gate.snap
---
source: crates/paladin-auth-tui/tests/view_snapshots.rs
expression: rendered
---
┌ Paladin Auth [plaintext] ────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────────────────────────────────────────────────────────────────────────── │
│                                                                              │
│                      No accounts. Press `a` to add one.                      │
│   ┌ Export accounts ─────────────────────────────────────────────────────┐   │
│   │ Destination: [  ]                                                    │   │
│   │                                                                      │   │
│   │ Format:      ▶ Plaintext ◀    Encrypted                              │   │
│   │                                                                      │   │
│   │ validation error: path: output_exists                                │   │
│   │                                                                      │   │
│   │                                                                      │   │
│   │           Tab cycles fields  ·  Enter submit  ·  Esc cancel          │   │
│   └──────────────────────────────────────────────────────────────────────┘   │
│                                                                              │
│                                                                              │
│ ──────────────────────────────────────────────────────────────────────────── │
│ [↑↓] move  [enter] copy  [C] copy-next  [n] next-HOTP  [a] add  [/] find     │
└──────────────────────────────────────────────────────────────────────────────┘
