crates/paladin-auth-tui/tests/snapshots/view_snapshots__snapshot_import_modal_counts_panel.snap
---
source: crates/paladin-auth-tui/tests/view_snapshots.rs
expression: rendered
---
┌ Paladin Auth [plaintext] ────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────────────────────────────────────────────────────────────────────────── │
│                                                                              │
│   ┌ Import accounts ─────────────────────────────────────────────────────┐   │
│   │ Import complete.                                                     │   │
│   │                                                                      │   │
│   │ Imported:    3                                                       │   │
│   │ Skipped:     1                                                       │   │
│   │ Replaced:    2                                                       │   │
│   │ Appended:    4                                                       │   │
│   │                                                                      │   │
│   │                                                                      │   │
│   │                                                                      │   │
│   │                         Enter or Esc to close                        │   │
│   └──────────────────────────────────────────────────────────────────────┘   │
│                                                                              │
│ ──────────────────────────────────────────────────────────────────────────── │
│ [↑↓] move  [enter] copy  [C] copy-next  [n] next-HOTP  [a] add  [/] find     │
└──────────────────────────────────────────────────────────────────────────────┘
