crates/paladin-auth-tui/tests/snapshots/view_snapshots__snapshot_import_modal_decrypt_failed.snap
---
source: crates/paladin-auth-tui/tests/view_snapshots.rs
expression: rendered
---
┌ Paladin Auth [plaintext] ────────────────────────────────────────────────────┐
│ Search:                                                                      │
│ ──────────────────────────────────────────────────────────────────────────── │
│                                                                              │
│   ┌ Import accounts ─────────────────────────────────────────────────────┐   │
│   │ Source:      [  ]                                                    │   │
│   │                                                                      │   │
│   │ Format:      ▶ Auto ◀    Otpauth      Aegis      Paladin Auth      Q │   │
│   │                                                                      │   │
│   │ On conflict: ▶ Skip ◀    Replace      Append                         │   │
│   │                                                                      │   │
│   │ decryption failed                                                    │   │
│   │                                                                      │   │
│   │                                                                      │   │
│   │           Tab cycles fields  ·  Enter submit  ·  Esc cancel          │   │
│   └──────────────────────────────────────────────────────────────────────┘   │
│                                                                              │
│ ──────────────────────────────────────────────────────────────────────────── │
│ [↑↓] move  [enter] copy  [C] copy-next  [n] next-HOTP  [a] add  [/] find     │
└──────────────────────────────────────────────────────────────────────────────┘
